# se306p1

./: .gitignore  README.md  build.sh  control.py  generate_world.py  launch.py  launch.sh  launch1.sh  launch2.sh  launch3.sh  se306p1.mpp  se306p1.world  se306p1_1.world  se306p1_2.world  se306p1_3.world  setup.sh  supervise.py  supervise.sh  swarmsies.dia  swarmsies.dia~  testWorld.world
images/: 1.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  all_4.pgm
se306p1/: .gitignore  CMakeLists.txt  Doxyfile  mainpage.dox  manifest.xml
se306p1/msg/: Associate.msg  Do.msg  Go.msg  Position.msg  Scan.msg  ScanResult.msg
se306p1/src/: .gitignore  doxygen.h  macros.h
se306p1/src/controller/: command.cpp  command.h  robot_controller.cpp  robot_controller.h
se306p1/src/controllers/: RobotController.cpp  RobotController.h
se306p1/src/supervisor/: circle_supervisor.cpp  circle_supervisor.h  circle_supervisor_main.cpp  robot.cpp  robot.h  rotate_supervisor.cpp  rotate_supervisor.h  supervisor.cpp  supervisor.h
se306p1/src/supervisor/behaviors/: all.h  behavior.cpp  behavior.h  goto_circle_behavior.cpp  goto_circle_behavior.h  goto_heptagon_behavior.cpp  goto_heptagon_behavior.h  goto_hexagon_behavior.cpp  goto_hexagon_behavior.h  goto_octagon_behavior.cpp  goto_octagon_behavior.h  goto_pentagon_behavior.cpp  goto_pentagon_behavior.h  goto_policy_behavior.h  goto_square_behavior.cpp  goto_square_behavior.h  goto_triangle_behavior.cpp  goto_triangle_behavior.h  rotate_behavior.cpp  rotate_behavior.h
se306p1/src/util/: command.cpp  command.h  pose.h  trig.cpp  trig.h  vector2.h
se306p1/test/: command.cpp  pose.cpp  robot_controller.cpp  supervisor.cpp  supervisor.test  testRobotController.cpp  test_robot_controller.cpp  trig.cpp  vector2.cpp
